--- a/css/services.css
+++ b/css/services.css
@@ -20,7 +20,7 @@
  */
 
 aside {
-    margin: 64px;
+    margin: 16px;
 }
 
 aside strong {
@@ -66,6 +66,14 @@ aside strong {
     position: absolute;
     bottom: 36px;
     right: 64px;
+}
+
+@media (min-width: 600px) {
+
+    aside {
+        margin: 64px;
+    }
+    
 }
 
 @media (min-width: 960px) {
